add anagram checker challenge to the project

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,5 +1,9 @@
-.home-page h2,
-ul {
+.home-page h2 {
+  display: flex;
+  justify-content: center;
+}
+
+.home-page li {
   display: flex;
   justify-content: center;
 }
