add natural sport challenge and update logo style

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,6 +1,8 @@
 .home-page h2 {
   display: flex;
   justify-content: center;
+  text-decoration: none;
+  font-family: sans-serif;
 }
 
 .home-page li {
